# freeswitch

./: .gitignore  configure.ac
src/mod/event_handlers/mod_ban/: Makefile.am  mod_ban.c
src/mod/event_handlers/mod_ban/data_struct/src/: arraylist.c  arraylist.h
src/mod/event_handlers/mod_call_events_hook/: .mod_call_events_hook.c.swo  Makefile.am  mod_call_events_hook.c
src/mod/event_handlers/mod_call_events_hook/curl_func/: curl_func.c  curl_func.h
src/mod/event_handlers/mod_call_events_hook/data_structs/: structs.c  structs.h
src/mod/event_handlers/mod_call_handling/: call_handling.h  testing  testing.c
src/mod/event_handlers/mod_call_handling/redis_library/: redis_lib  redis_lib.c  redis_lib.h
src/mod/event_handlers/mod_challenge/: Makefile.am  mod_challenge.c
src/mod/event_handlers/mod_event_hooks/: Makefile.am  mod_event_hooks.c
tests/unit/: switch_core_asr  switch_sip
